2006-02-24  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: process() stashes its @ARGV in Config options.
	restart_as_root() uses this instead of a passed @ARGV list, and
	does its own check for whether it is already root.

2006-02-24  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm, Engine.pm: Change buildlock removal process. Now we check
	if any buildlocks appear stale before trying to remove them, so we don't
	make many redundant calls to dpkg.

2006-02-23  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Use the gcc build number for the revision if
	possible; also make sure tests are using /usr/bin/gcc rather than
	some random gcc in the path (should speed things up a little if
	ccache or distcc are hanging around)

2006-02-23  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Check for dev-tools using VirtPackage directly
	instead of using the full Package/PkgVersion database API.

2006-02-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: 'find' should follow symlinks.

2006-02-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Configure.pm:  Add a list of existing binary distributions to the
	code.  If there is not (yet) a binary distribution corresponding to
	the current $distribution, UseBinaryDist is set to false.

2006-02-17  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Always parse Architecture field even if it will
	ultimately be ignored.

2006-02-16  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Revert UpdatePOD to old dpkg scriptlets. Use new
	multiline AutoDpkg field to control fink-instscript calls.
	Implement AutoDpkg:UpdatePOD subfield.

2006-02-15  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: recognize 10.4.5 (on both ppc and intel)

2006-02-08  Remi Mommsen <remigius.mommsen@cern.ch>

	* PkgVersion.pm: get_debpath() returns path with distribution, not
	using the symbolic link '%p/fink/dists'. The symbolic link from